# databricks-youtube-etl-pipeline

./: .gitignore  LICENSE  README.md  databricks.yml  main.py  pyproject.toml  requirements.txt
yt_ingest/: __init__.py  __main__.py  cli.py  config.py  http_client.py  io_ndjson.py  pipeline.py  rate_limiter.py  utils.py  youtube_api.py
